--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,13 +9,82 @@
     tools:context="com.moldedbits.ottoruntimesubscriptions.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="@+id/content_main"
+    <Button
+        android:text="Event1"
+        android:layout_width="88dp"
+        android:layout_height="48dp"
+        android:id="@+id/btn_event1"
         app:layout_constraintLeft_toLeftOf="@+id/content_main"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="@+id/content_main"
+        android:layout_marginTop="72dp"/>
+
+    <Button
+        android:text="Event2"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:id="@+id/btn_event2"
+        app:layout_constraintLeft_toRightOf="@+id/btn_event1"
+        android:layout_marginLeft="32dp"
+        android:layout_marginStart="32dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_event1"/>
+
+    <Button
+        android:text="Event3"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:id="@+id/btn_event3"
+        app:layout_constraintLeft_toRightOf="@+id/btn_event2"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toTopOf="@+id/btn_event2"
         app:layout_constraintRight_toRightOf="@+id/content_main"
-        app:layout_constraintTop_toTopOf="@+id/content_main"/>
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_event2"
+        app:layout_constraintVertical_bias="0.0"/>
+
+    <EditText
+        android:layout_width="217dp"
+        android:layout_height="44dp"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/et_event1"
+        app:layout_constraintLeft_toLeftOf="@+id/content_main"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn_event2"
+        android:layout_marginTop="64dp"
+        app:layout_constraintRight_toRightOf="@+id/content_main"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintHorizontal_bias="0.47"/>
+
+    <EditText
+        android:layout_width="217dp"
+        android:layout_height="44dp"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/et_event2"
+        app:layout_constraintLeft_toLeftOf="@+id/et_event1"
+        app:layout_constraintTop_toBottomOf="@+id/et_event1"
+        android:layout_marginTop="56dp"
+        app:layout_constraintRight_toRightOf="@+id/et_event1"
+        app:layout_constraintHorizontal_bias="1.0"/>
+
+    <EditText
+        android:layout_width="215dp"
+        android:layout_height="42dp"
+        android:inputType="textPersonName"
+        android:ems="10"
+        app:layout_constraintLeft_toLeftOf="@+id/et_event2"
+        app:layout_constraintTop_toBottomOf="@+id/et_event2"
+        android:layout_marginTop="40dp"
+        app:layout_constraintRight_toRightOf="@+id/et_event2"
+        app:layout_constraintBottom_toBottomOf="@+id/content_main"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.29"/>
+
 
 </android.support.constraint.ConstraintLayout>
